修改本地存储

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- 引入在线阿里巴巴icon -->
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1690873_b36tanqesl.css">
     
-    <title>2020江西国编特岗教师查分排名系统</title>
+    <title>2020江西公务员查分排名系统</title>
       <!-- 在 head 标签中添加 meta 标签，并设置 viewport-fit=cover 值 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
       <!-- 开启 safe-area-inset-bottom 属性 -->
